# Auditrol

./: .gitignore  README.md  README_TECHNICAL.md  pyproject.toml  requirements.txt
backend/: app.py
backend/pages/: 1_👀​_Duplicate_Detection_Module.py
