[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhi16012004",email = "bigleu88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "openai (>=1.106.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
